# PluginTerminal

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile
plugins/: CMakeLists.txt
plugins/bfPlugin/: CMakeLists.txt
plugins/bfPlugin/include/: BfInterpreter.hpp  BfPlugin.hpp
plugins/bfPlugin/src/: BfInterpreter.cpp  BfPlugin.cpp
plugins/echoPlugin/: CMakeLists.txt
plugins/echoPlugin/include/: EchoPlugin.hpp
plugins/echoPlugin/src/: EchoPlugin.cpp
plugins/include/: PluginBase.hpp
plugins/nekoPlugin/: CMakeLists.txt
plugins/nekoPlugin/include/: NekoPlugin.hpp
plugins/nekoPlugin/src/: NekoPlugin.cpp
plugins/pingPlugin/: CMakeLists.txt
plugins/pingPlugin/include/: PingPlugin.hpp
plugins/pingPlugin/src/: PingPlugin.cpp
plugins/systemPlugin/: CMakeLists.txt
plugins/systemPlugin/include/: SystemPlugin.hpp
plugins/systemPlugin/src/: SystemPlugin.cpp
src/: main.cpp
